feat: CPU IRQ Handles mapped. : Construction:

--- a/devices/makefile
+++ b/devices/makefile
@@ -61,6 +61,7 @@ endif
 ifeq ($(TARGET), STM32F401CDU6)
 DEVICE_SRCS += \
 stm32_f401cdu6_system.c \
+stm32_f401cdu6_irq.c
 
 DEVICE_ASM_SRC += \
 stm32_f401xx_startup.s
