--- a/kernel/makefile
+++ b/kernel/makefile
@@ -70,7 +70,7 @@ timers.c
 #-----------------------------------------------
 #  Core         :   ARM-CM4
 #-----------------------------------------------
-ifeq ($(TARGET), STM32F401CDU6)
+ifeq ($(TARGET), STM32F401)
 FREERTOS_INC_SRC_DIR += \
 -IFreeRTOS-Kernel/portable/GCC/ARM_CM4F
 
@@ -125,7 +125,7 @@ sources_build:
 	echo ; \
 	echo Compiling ... $$s ; \
 	echo ; \
-	$(CC) -D$(TARGET) $(INC_SRC_DIR) $(CC_OPTIMIZATION)  $(CC_EXTRA_FLAGS) $(CC_INPUT_STD) $(CC_WARNINGS) $(CC_TARGET_PROP) -o ../$(OBJECTS_LOCATION)$$s.o $(SOURCE_DIR)$$s; \
+	$(CC) -D$(TARGET) $(FREERTOS_INC_SRC_DIR) $(CC_OPTIMIZATION)  $(CC_EXTRA_FLAGS) $(CC_INPUT_STD) $(CC_WARNINGS) $(CC_TARGET_PROP) -o ../$(OBJECTS_LOCATION)$$s.o $(SOURCE_DIR)$$s; \
 	echo "$(OBJECTS_LOCATION)$$s.o" >> ../object.list ; \
 	done
 
