--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -8,16 +8,15 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     
     steps:
-    - name: Install Arm GNU Toolchain (arm-none-eabi-gcc)
-      uses: carlosperate/arm-none-eabi-gcc-action@v1
-      with:
-        release: '14.2.Rel1' # <-- The compiler release to use
-        
-    steps:
-    - uses: actions/checkout@v4
-    - name: make all TARGET=STM32F401
-      run:  make all TARGET=STM32F401
+      - name: Install Arm GNU Toolchain (arm-none-eabi-gcc)
+      - uses: carlosperate/arm-none-eabi-gcc-action@v1
+      - with:
+          release: '14.2.Rel1'
+
+      - uses: actions/checkout@v4
+      - name: make all TARGET=STM32F401
+        run:  make all TARGET=STM32F401
+
