--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,4 +15,4 @@ jobs:
     - uses: fiam/arm-none-eabi-gcc@v1
       with:
         release: '10.3-2021.10' # The arm-none-eabi-gcc release to use.
-        run:  make all TARGET=STM32F401
+    - run:  make all TARGET=STM32F401
